--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>trade-boost-automator</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>CrazeTrader</title>
+    <meta name="description" content="Experience the easiest way to trade cryptocurrencies with real-time price monitoring and automated trading features." />
+    <meta name="author" content="CrazeTrader" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="CrazeTrader | Convert USDT to DOG with 2.99% Bonus" />
+    <meta property="og:description" content="Experience the easiest way to trade cryptocurrencies with real-time price monitoring and automated trading features." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://i.ibb.co/v4TcwfjP/tokens-scaled.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@CrazeTrader" />
+    <meta name="twitter:image" content="https://i.ibb.co/v4TcwfjP/tokens-scaled.jpg" />
   </head>
 
   <body>
