--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CrazeTrader</title>
+    <title>CrazeTrader | Convert USDT to DOG with 2.99% Bonus</title>
     <meta name="description" content="Experience the easiest way to trade cryptocurrencies with real-time price monitoring and automated trading features." />
     <meta name="author" content="CrazeTrader" />
 
